yggdrasil: move `yggdrasil-jumper` setup/shutdown logic to `netifd`
Signed-off-by: one-d-wide <one-d-wide@protonmail.com>

--- a/net/yggdrasil-jumper/Makefile
+++ b/net/yggdrasil-jumper/Makefile
@@ -1,14 +1,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=yggdrasil-jumper
-PKG_VERSION:=0.2.0
+PKG_VERSION:=0.3.0
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/one-d-wide/yggdrasil-jumper/tar.gz/v$(PKG_VERSION)?
-PKG_HASH:=1660eca235f3f7f21a632355fa3ed9961d7c180c3d2d3d486ddd76642905d450
+PKG_HASH:=d0fd59e9f7a110094c9189b49b812fb0014c6c45535b4d30effd7cf602961454
 
-PKG_MAINTAINER:=William Fleurant <meshnet@protonmail.com>
+PKG_MAINTAINER:=one-d-wide <one-d-wide@protonmail.com>
 PKG_LICENSE:=LGPL-3.0-only
 
 PKG_BUILD_DEPENDS:=rust/host
@@ -38,23 +38,9 @@ endef
 
 
 define Package/yggdrasil-jumper/install
-	$(INSTALL_DIR) $(1)/usr/sbin $(1)/etc/uci-defaults $(1)/etc/init.d
+	$(INSTALL_DIR) $(1)/usr/sbin
 
 	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/bin/yggdrasil-jumper $(1)/usr/sbin
-
-	$(INSTALL_BIN) ./files/yggdrasil-jumper.defaults $(1)/etc/uci-defaults/yggdrasil-jumper
-
-	$(INSTALL_BIN) ./files/yggdrasil-jumper.init $(1)/etc/init.d/yggdrasil-jumper
-endef
-
-
-define Package/cjdns/postinst
-#!/bin/sh
-if [ -z $${IPKG_INSTROOT} ] ; then
-	( . /etc/uci-defaults/yggdrasil-jumper ) && rm -f /etc/uci-defaults/yggdrasil-jumper
-	/etc/init.d/yggdrasil-jumper enabled || /etc/init.d/yggdrasil-jumper enable
-	exit 0
-fi
 endef
 
 
